re PR c++/15890 (internal compiler error: in c_expand_expr, at c-common.c:4138)

PR c++/15890
	* pt.c (push_template_decl_real): Disallow template allocation
	functions with fewer than two parameters.

	PR c++/15890
	* g++.dg/template/delete1.C: New test.

From-SVN: r86268